# Template-for-pybind11

./: LICENSE  PKGBUILD  README.md
cmake_example/: CMakeLists.txt  README.md  pyproject.toml
cmake_example/src/: binder.cpp
cmake_example/tests/: test.py
